--- a/Labyrinth/Labyrinth/Views/Game/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/Game/Index.cshtml
@@ -2,6 +2,42 @@
 @{
     ViewBag.Title = "GameView";
 }
-
+<link rel="stylesheet" type="text/css" media="screen" href="index.css">
+<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<link rel="apple-touch-icon" href="icons/touch-icon-iphone-60x60.png">
+<link rel="apple-touch-icon" sizes="76x76" href="icons/touch-icon-ipad-76x76.png">
+<link rel="apple-touch-icon" sizes="120x120" href="icons/touch-icon-iphone-retina-120x120.png">
+<link rel="apple-touch-icon" sizes="152x152" href="icons/touch-icon-ipad-retina-152x152.png">
+<link rel="manifest" href="manifest.json">
 <h2>Game</h2>
 
+<!-- Canvas placeholder -->
+<div id="screen"></div>
+
+<!-- melonJS Library -->
+<!-- build:js js/app.min.js -->
+<script type="text/javascript" src="~/Content/Game/boilerplate/lib/melonJS.js"></script>
+
+<!-- Plugin(s) -->
+<script type="text/javascript" src="~/Content/Game/boilerplate/lib/plugins/debug/debugPanel.js"></script>
+
+<!-- Game Scripts -->
+<script type="text/javascript" src="~/Content/Game/boilerplate/js/game.js"></script>
+<script type="text/javascript" src="~/Content/Game/boilerplate/build/js/resources.js"></script>
+
+<script type="text/javascript" src="~/Content/Game/boilerplate/js/entities/entities.js"></script>
+<script type="text/javascript" src="~/Content/Game/boilerplate/js/entities/HUD.js"></script>
+
+<script type="text/javascript" src="~/Content/Game/boilerplate/js/screens/title.js"></script>
+<script type="text/javascript" src="~/Content/Game/boilerplate/js/screens/play.js"></script>
+<!-- /build -->
+<!-- Bootstrap -->
+<script type="text/javascript">
+    window.onReady(function onReady() {
+        alert("1");
+                game.onload();
+            });
+</script>
