--- a/Labyrinth/Labyrinth/Views/Game/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/Game/Index.cshtml
@@ -19,25 +19,24 @@
 
 <!-- melonJS Library -->
 <!-- build:js js/app.min.js -->
-<script type="text/javascript" src="~/Content/Game/boilerplate/lib/melonJS.js"></script>
+<script type="text/javascript" src="~/Content/Game/lib/melonJS.js"></script>
 
 <!-- Plugin(s) -->
-<script type="text/javascript" src="~/Content/Game/boilerplate/lib/plugins/debug/debugPanel.js"></script>
+<script type="text/javascript" src="~/Content/Game/lib/plugins/debug/debugPanel.js"></script>
 
 <!-- Game Scripts -->
-<script type="text/javascript" src="~/Content/Game/boilerplate/js/game.js"></script>
-<script type="text/javascript" src="~/Content/Game/boilerplate/build/js/resources.js"></script>
+<script type="text/javascript" src="~/Content/Game/js/game.js"></script>
+<script type="text/javascript" src="~/Content/Game/build/js/resources.js"></script>
 
-<script type="text/javascript" src="~/Content/Game/boilerplate/js/entities/entities.js"></script>
-<script type="text/javascript" src="~/Content/Game/boilerplate/js/entities/HUD.js"></script>
+<script type="text/javascript" src="~/Content/Game/js/entities/entities.js"></script>
+<script type="text/javascript" src="~/Content/Game/js/entities/HUD.js"></script>
 
-<script type="text/javascript" src="~/Content/Game/boilerplate/js/screens/title.js"></script>
-<script type="text/javascript" src="~/Content/Game/boilerplate/js/screens/play.js"></script>
+<script type="text/javascript" src="~/Content/Game/js/screens/title.js"></script>
+<script type="text/javascript" src="~/Content/Game/js/screens/play.js"></script>
 <!-- /build -->
 <!-- Bootstrap -->
 <script type="text/javascript">
     window.onReady(function onReady() {
-        alert("1");
                 game.onload();
             });
 </script>
