--- a/Labyrinth/Labyrinth/Views/Game/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/Game/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "GameView";
 }
-<link rel="stylesheet" type="text/css" media="screen" href="index.css">
+<link rel="stylesheet" type="text/css" media="screen" href="~/Content/Game/index.css">
 <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
