--- a/Labyrinth/Labyrinth/Views/LeaderBoard/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/LeaderBoard/Index.cshtml
@@ -9,31 +9,36 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Nickname)
+            Place
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Gold)
+            @Html.DisplayNameFor(model => model.Nickname)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Points)
         </th>
         <th></th>
     </tr>
-
+    @{
+        int counter = 1;
+    }
     @foreach (var item in Model)
     {
+        
         <tr>
+            <td>
+                @counter
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Nickname)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Gold)
-            </td>
+
             <td>
                 @Html.DisplayFor(modelItem => item.Points)
             </td>
            
         </tr>
+        counter = counter + 1;
     }
 
 </table>
