"Working on Images, added migration"

--- a/Labyrinth/Labyrinth/Views/Items/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/Items/Index.cshtml
@@ -14,6 +14,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Image)
+        </th>
         <th></th>
     </tr>
 
@@ -21,6 +24,9 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            <img src="@Url.Action("getImage", "Items", new { image = item.Image })" />
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
