--- a/Labyrinth/Labyrinth/Views/Shared/_Layout.cshtml
+++ b/Labyrinth/Labyrinth/Views/Shared/_Layout.cshtml
@@ -16,6 +16,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
@@ -25,6 +27,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("LeaderBoard", "Index", "LeaderBoard")</li>
+                    <li>@Html.ActionLink("Market","Index","Market")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
