--- a/Labyrinth/Labyrinth/Views/Game/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/Game/Index.cshtml
@@ -13,7 +13,7 @@
 <link rel="apple-touch-icon" sizes="152x152" href="icons/touch-icon-ipad-retina-152x152.png">
 <link rel="manifest" href="manifest.json">
 <h2>Game</h2>
-
+<script type="text/javascript">var url = '@Url.Action("YouDied", "Game", new { score = "__score__" })';</script>
 <!-- Canvas placeholder -->
 <div id="screen"></div>
 
