--- a/Labyrinth/Labyrinth/Views/Market/SellItems.cshtml
+++ b/Labyrinth/Labyrinth/Views/Market/SellItems.cshtml
@@ -10,7 +10,9 @@
         <th>
             Item Name
         </th>
-
+        <th>
+            Icon
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Quantity)
         </th>
@@ -32,7 +34,10 @@
                     @Html.Hidden("name",item.Item.Name)
                     @Html.DisplayFor(modelItem => item.Item.Name)
                     @*@Html.TextBox("name", item.Item.Name, new { @readonly = "readonly" })*@
-                    @Html.Hidden("itemId", item.Item.Id)
+                    @Html.HiddenFor(modelItem => item.Item.Id, new { Name = "itemId", id = "itemId" })
+                </td>
+                <td>
+                    <img src="@Url.Action("getImage", "Market", new { id = item.Item.Id } )"  height="30px" width="30px"/>
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Quantity)
