--- a/Labyrinth/Labyrinth/Views/Market/SellItems.cshtml
+++ b/Labyrinth/Labyrinth/Views/Market/SellItems.cshtml
@@ -3,10 +3,10 @@
     ViewBag.Title = "SellItems";
 }
 
-<h2>SellItems</h2>
+<h2>Sell Items</h2>
 
 <table class="table">
-    <tr>
+    <tr class="trcolor">
         <th>
             Item Name
         </th>
