--- a/Labyrinth/Labyrinth/Views/LeaderBoard/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/LeaderBoard/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Leader board</h2>
 
-<table class="table">
-    <tr>
+<table class="table table-hover">
+    <tr class="trcolor">
         <th>
             Place
         </th>
@@ -17,7 +17,6 @@
         <th>
             @Html.DisplayNameFor(model => model.Points)
         </th>
-        <th></th>
     </tr>
     @{
         int counter = 1;
