--- a/Labyrinth/Labyrinth/Views/Market/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/Market/Index.cshtml
@@ -4,13 +4,11 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Market</h2>
 
-<p>
-    @Html.ActionLink("Sell Items", "sellItems")
-</p>
-<table class="table">
-    <tr>
+
+<table class="table table-hover">
+    <tr class="trcolor">
         <th>
             Item Name
         </th>
@@ -52,3 +50,8 @@
         }
 
 </table>
+<p>
+    <input type="button" class="btn btn-primary btn-md" value="Sell items" onclick="@("window.location.href='" + @Url.Action("sellItems", "Market") + "'");" />
+
+    @*Html.ActionLink("Sell Items", "sellItems")*@
+</p>
