--- a/Labyrinth/Labyrinth/Views/PlayerItems/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/PlayerItems/Index.cshtml
@@ -4,13 +4,13 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Player's Items</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
+<table class="table table-hover">
+    <tr class="trcolor">
         <th>
             @Html.DisplayNameFor(model => model.Item.Name)
         </th>
