--- a/Labyrinth/Labyrinth/Views/Players/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/Players/Index.cshtml
@@ -4,13 +4,13 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Players</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
+<table class="table table-hover">
+    <tr class="trcolor">
         <th>
             @Html.DisplayNameFor(model => model.Nickname)
         </th>
@@ -20,7 +20,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Points)
         </th>
-        <th></th>
+        
     </tr>
 
 @foreach (var item in Model) {
@@ -34,11 +34,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.Points)
         </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
+        
     </tr>
 }
 
