Solved marketplace bugs, added some design

--- a/Labyrinth/Labyrinth/Content/theme.bootstrap.css
+++ b/Labyrinth/Labyrinth/Content/theme.bootstrap.css
@@ -4923,12 +4923,12 @@ a.label:focus {
   padding: 3px 7px;
   font-size: 12px;
   font-weight: bold;
-  color: #ffffff;
+  color: #f5f5f5;
   line-height: 1;
   vertical-align: middle;
   white-space: nowrap;
   text-align: center;
-  background-color: #2fa4e7;
+  background-color: #164c7a;
   border-radius: 10px;
 }
 .badge:empty {
