--- a/Labyrinth/Labyrinth/Views/LeaderBoard/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/LeaderBoard/Index.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Leader board</h2>
+<h2>Leader board </h2>
+<img src="~/Content/Images/crown.png" width="50" height="50" />
 
 <table class="table table-hover">
     <tr class="trcolor">
