--- a/Labyrinth/Labyrinth/Views/Market/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/Market/Index.cshtml
@@ -1,11 +1,25 @@
 ﻿@model IEnumerable<Labyrinth.Models.Sell>
 @using Microsoft.AspNet.Identity;
+@using Labyrinth.Models;
 @{
     ViewBag.Title = "Index";
+    ApplicationDbContext db = new ApplicationDbContext();
+    var gold = db.Players.Find(new Guid(User.Identity.GetUserId())).Gold;
 }
-
+<h1> My Gold:</h1> <span class="badge"><font size="8"> @gold </font></span>
 <h2>Market</h2>
-
+<script>
+    function NoGold(idI, price) {
+        if (price > '@gold') {
+            alert("Not enough gold");
+        }
+        else {
+            var url = '@Url.Action("buyItem", "Market", new { id = -1 })';
+            url = url.replace('-1', idI);
+            window.location = url;
+        }
+    }
+</script>
 
 <table class="table table-hover">
     <tr class="trcolor">
@@ -24,7 +38,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Price)
         </th>
-        <th>Buy</th>
+        <th></th>
     </tr>
 
     @foreach (var item in Model)
@@ -52,7 +66,8 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                    @Html.ActionLink("Buy Item", "buyItem", new { id = item.Id })
+                    @*@Html.ActionLink("Buy Item", "buyItemwaaw", new { id = item.Id })*@
+                <input type="button" class="btn-link" value="Buy" onclick="NoGold(@item.Id, @item.Price)" />
  
             </td>
         </tr>
@@ -83,7 +98,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Price)
         </th>
-        <th>Buy</th>
+        <th></th>
     </tr>
 
     @foreach (var item in Model)
