--- a/Labyrinth/Labyrinth/Css/ChatStyle.css
+++ b/Labyrinth/Labyrinth/Css/ChatStyle.css
@@ -53,7 +53,7 @@
     width: 650px;
     margin-left: auto;
     margin-right: auto;
-    border: solid 1px gray;
+    border: solid 5px gray;
 }
 
     .chatRoom .title
@@ -92,8 +92,8 @@
 
         .chatRoom .content .users
         {
-            float: right;
-            width: 240px;
+            float: left;
+            width: 230px;
             height: 300px;
         }
 
@@ -102,15 +102,15 @@
                 display: block;
                 cursor: pointer;
                 padding: 4px;
-                background-color: #f9f9f9;
-                border-bottom: solid 1px #5f9482;
+                background-color: #c6c6c6;
+                border-bottom: solid 1px #ffcbcb;
             }
 
             .chatRoom .content .users .loginUser
             {
                 display: block;
                 padding: 4px;
-                color: gray;
+                color: black;
                 border-bottom: solid 1px #5f9482;
             }
 
@@ -127,7 +127,7 @@
 
         .chatRoom .messageBar .textbox
         {
-            width: 550px;
+            width: 800px;
         }
 
 .disconnect
