--- a/Labyrinth/Labyrinth/Views/LeaderBoard/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/LeaderBoard/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Leader board </h2>
 <img src="~/Content/Images/crown.png" width="50" height="50" />
 
-<table class="table table-hover">
+<table class="table table-hover table-bordered">
     <tr class="trcolor">
         <th>
             Place
