--- a/Labyrinth/Labyrinth/Views/Market/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/Market/Index.cshtml
@@ -21,7 +21,7 @@
     }
 </script>
 
-<table class="table table-hover">
+<table class="table table-hover table-bordered">
     <tr class="trcolor">
         <th>
             Item Name
