--- a/Labyrinth/Labyrinth/Views/Market/SellItems.cshtml
+++ b/Labyrinth/Labyrinth/Views/Market/SellItems.cshtml
@@ -25,7 +25,7 @@
 </script>
 <h2>Sell Items</h2>
 
-<table class="table">
+<table class="table table-hover table-bordered">
     <tr class="trcolor">
         <th>
             Item Name
