--- a/Labyrinth/Labyrinth/Content/theme.bootstrap.css
+++ b/Labyrinth/Labyrinth/Content/theme.bootstrap.css
@@ -1592,22 +1592,22 @@ pre code {
 .container {
   margin-right: auto;
   margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 @media (min-width: 768px) {
   .container {
-    width: 750px;
+    width: auto;
   }
 }
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    width: auto;
   }
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: auto;
   }
 }
 .container-fluid {
