--- a/Labyrinth/Labyrinth/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Labyrinth/Labyrinth/Views/Account/ExternalLoginConfirmation.cshtml
@@ -14,14 +14,19 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <p class="text-info">
         You've successfully authenticated with <strong>@ViewBag.LoginProvider</strong>.
-        Please enter a user name for this site below and click the Register button to finish
+        Please click the Register button to finish
         logging in.
     </p>
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Nickname, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Nickname, new { @class = "form-control" })
         </div>
     </div>
     <div class="form-group">
