--- a/Labyrinth/Labyrinth/Views/LeaderBoard/Index.cshtml
+++ b/Labyrinth/Labyrinth/Views/LeaderBoard/Index.cshtml
@@ -51,7 +51,7 @@
                         @Html.DisplayFor(modelItem => item.Points)
                             </font>
                     </td>
-                    @if (User.IsInRole("Administrator"))
+                    @if (User.IsInRole("Administrator") && item.Id != idUser)
                     {
                         <td>@Html.ActionLink("Ban", "banUser", new { id = item.Id })</td>
                     }
