--- a/Labyrinth/Labyrinth/Views/Shared/_Layout.cshtml
+++ b/Labyrinth/Labyrinth/Views/Shared/_Layout.cshtml
@@ -332,6 +332,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
 
             </div>
@@ -341,7 +342,10 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("LeaderBoard", "Index", "LeaderBoard")</li>
                     <li>@Html.ActionLink("Market", "Index", "Market")</li>
-                    <li>@Html.ActionLink("Update Status", "FacebookPost", "Account")</li>
+                    @if (User.IsInRole("FacebookAdministrator"))
+                    {
+                        <li>@Html.ActionLink("Update Status", "FacebookPost", "Account")</li>
+                    }
                     @if (User.IsInRole("Administrator"))
                     {
                         <li>@Html.ActionLink("MailPlayers", "Mail", "Home")</li>
