--- a/Labyrinth/Labyrinth/Views/Home/About.cshtml
+++ b/Labyrinth/Labyrinth/Views/Home/About.cshtml
@@ -2,6 +2,11 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>
+    Game created by Budu Paul and Major Andrea using TiledMap, MelonJS and C#.
+</p>
+
+<p>
+    For more information contact andreamajor96.am@gmail.com or budupaul@yahoo.com   
+</p>
