regular user can share on facebook

--- a/Labyrinth/Labyrinth/Views/Home/About.cshtml
+++ b/Labyrinth/Labyrinth/Views/Home/About.cshtml
@@ -10,3 +10,40 @@
 <p>
     For more information contact andreamajor96.am@gmail.com or budupaul@yahoo.com   
 </p>
+
+
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId: '315116632281038',
+      autoLogAppEvents : true,
+      xfbml            : true,
+      version          : 'v2.10'
+    });
+    FB.AppEvents.logPageView();
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+
+
+
+<div id="shareBtn" class="btn btn-success clearfix">Share this app with your friends </div>
+
+
+
+<script>
+document.getElementById('shareBtn').onclick = function() {
+  FB.ui({
+    method: 'share',
+    display: 'popup',
+    href: 'http://facebook.com',
+  }, function(response){});
+}
+</script>
