--- a/Labyrinth/Labyrinth/Views/Home/About.cshtml
+++ b/Labyrinth/Labyrinth/Views/Home/About.cshtml
@@ -43,7 +43,7 @@ document.getElementById('shareBtn').onclick = function() {
   FB.ui({
     method: 'share',
     display: 'popup',
-    href: 'https://labyrinthgame.azurewebsites.net/',
+    href: 'https://labyrinthgame.azurewebsites.net',
   }, function(response){});
 }
 </script>
